[gd_scene load_steps=5 format=3 uid="uid://xw3q4ofcj7dm"]

[ext_resource type="Script" path="res://scenes/settings_menu/settings_menu.gd" id="1_yvf2n"]
[ext_resource type="Texture2D" uid="uid://dnpuq5cxufvy2" path="res://assets/images/Checkbox/Checkbox.png" id="2_x0k8c"]
[ext_resource type="Texture2D" uid="uid://8aiv6lwn7uw1" path="res://assets/images/Checkbox/Checkbox_Checked.png" id="3_pf172"]

[sub_resource type="LabelSettings" id="LabelSettings_nsqkf"]
font_size = 48

[node name="SettingsMenu" type="BoxContainer"]
offset_right = 424.0
offset_bottom = 296.0
vertical = true
script = ExtResource("1_yvf2n")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
theme_override_constants/h_separation = 20
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Volume"
label_settings = SubResource("LabelSettings_nsqkf")

[node name="VolumeHSlider" type="HSlider" parent="GridContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 4
value = 50.0

[node name="Label2" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "FPS"
label_settings = SubResource("LabelSettings_nsqkf")

[node name="FPSOptionButton" type="OptionButton" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 48
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "30"
popup/item_0/id = 0
popup/item_1/text = "60"
popup/item_1/id = 1

[node name="Label3" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Fullscreen"
label_settings = SubResource("LabelSettings_nsqkf")

[node name="TextureButton" type="TextureButton" parent="GridContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
texture_normal = ExtResource("2_x0k8c")
texture_pressed = ExtResource("3_pf172")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="RestoreToDefaultButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Restore to default"

[node name="SaveAndReturnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Save and return"

[connection signal="pressed" from="VBoxContainer/RestoreToDefaultButton" to="." method="_on_restore_to_default_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveAndReturnButton" to="." method="_on_save_and_return_button_pressed"]
